force-app/main/default/objects/Case/fields/Support_Director_Follow_Up_Summary__c.field-meta.xml
<CustomField>
    <fullName>Support_Director_Follow_Up_Summary__c</fullName>
    <label>Support Director Follow Up Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>