force-app/main/default/objects/Case/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party System Related</fullName>
            </value>
            <value>
                <fullName>Install/Upgrade</fullName>
            </value>
            <value>
                <fullName>CC/RC</fullName>
            </value>
            <value>
                <fullName>Cloud Database/Services</fullName>
            </value>
            <value>
                <fullName>Configuration Change</fullName>
            </value>
            <value>
                <fullName>Contact/Deal Manager Support</fullName>
            </value>
            <value>
                <fullName>Customer Data Issue</fullName>
            </value>
            <value>
                <fullName>Customer Lacked Training</fullName>
            </value>
            <value>
                <fullName>Customer Pilot</fullName>
            </value>
            <value>
                <fullName>Customer self-inflicted</fullName>
            </value>
            <value>
                <fullName>Database Maintenance</fullName>
            </value>
            <value>
                <fullName>Database Related</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>General Information</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Hardware Failure</fullName>
            </value>
            <value>
                <fullName>Inadequate Intapp Documentation</fullName>
            </value>
            <value>
                <fullName>Incomplete PS Implementation</fullName>
            </value>
            <value>
                <fullName>Installation / Upgrade</fullName>
            </value>
            <value>
                <fullName>Integration Issue</fullName>
            </value>
            <value>
                <fullName>IntApp Question</fullName>
            </value>
            <value>
                <fullName>Legacy Services</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Non-IntApp Support</fullName>
            </value>
            <value>
                <fullName>OS/Environmental Error</fullName>
            </value>
            <value>
                <fullName>Performance Issues</fullName>
            </value>
            <value>
                <fullName>Portal Administration</fullName>
            </value>
            <value>
                <fullName>Product Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>