force-app/main/default/objects/Case/fields/SupportEngineer__c.field-meta.xml
<CustomField>
    <fullName>SupportEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SupportEngineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SupportEngineerUsers</relationshipName>
    <type>Lookup</type>
</CustomField>