force-app/main/default/objects/Case/fields/SupportSurveySent__c.field-meta.xml
<CustomField>
    <fullName>SupportSurveySent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SupportSurveySent</label>
    <type>Checkbox</type>
</CustomField>