force-app/main/default/objects/Case/fields/Survey_ACCalculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_ACCalculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey_ACCalculated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Survey_ACCalculated)</relationshipLabel>
    <relationshipName>AdoptionContact</relationshipName>
    <type>Lookup</type>
</CustomField>