force-app/main/default/objects/Case/fields/Survey_AccountCalculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_AccountCalculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey_AccountCalculated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>SurveyAccount</relationshipName>
    <type>Lookup</type>
</CustomField>