force-app/main/default/objects/Case/fields/Survey_FinalComments__c.field-meta.xml
<CustomField>
    <fullName>Survey_FinalComments__c</fullName>
    <label>Survey Final Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>