force-app/main/default/objects/Case/fields/Survey_IntAppProduct__c.field-meta.xml
<CustomField>
    <fullName>Survey_IntAppProduct__c</fullName>
    <label>Survey IntApp Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>Time Builder</fullName>
            </value>
            <value>
                <fullName>Integration Builder</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Series 4 Upgrade</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>RollCall</fullName>
            </value>
            <value>
                <fullName>ActivityTracker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>