force-app/main/default/objects/Case/fields/Survey_MilestoneCalculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_MilestoneCalculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey_MilestoneCalculated</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>SurveyMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>