force-app/main/default/objects/Case/fields/Survey_PC_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_PC_Calculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Principal Consultant Calculated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Survey Principal Consultant)</relationshipLabel>
    <relationshipName>CasesPC</relationshipName>
    <type>Lookup</type>
</CustomField>