force-app/main/default/objects/Case/fields/Survey_PleasedResult__c.field-meta.xml
<CustomField>
    <fullName>Survey_PleasedResult__c</fullName>
    <label>Survey Pleased Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 (Unsatisfied)</fullName>
            </value>
            <value>
                <fullName>2 (Underwhelmed)</fullName>
            </value>
            <value>
                <fullName>3 (Satisfied)</fullName>
            </value>
            <value>
                <fullName>4 (Very Satisfied)</fullName>
            </value>
            <value>
                <fullName>5 (Exceptionally Satisfied)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>