force-app/main/default/objects/Case/fields/Survey_PMCalculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_PMCalculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey_PMCalculated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Survey_PMCalculated)</relationshipLabel>
    <relationshipName>PMContact</relationshipName>
    <type>Lookup</type>
</CustomField>