force-app/main/default/objects/Case/fields/Survey_ProjectCalculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_ProjectCalculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey_ProjectCalculated</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>SurveyProject</relationshipName>
    <type>Lookup</type>
</CustomField>