force-app/main/default/objects/Case/fields/Survey_SA_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_SA_Calculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Solution Architect Calculated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Survey Solution Architect Calculated)</relationshipLabel>
    <relationshipName>CasesSA</relationshipName>
    <type>Lookup</type>
</CustomField>