force-app/main/default/objects/Case/fields/Survey_SECalculated__c.field-meta.xml
<CustomField>
    <fullName>Survey_SECalculated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey_SECalculated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>