force-app/main/default/objects/Case/fields/Suspect_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Prospect__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Suspect/Prospect</label>
    <type>Checkbox</type>
</CustomField>