force-app/main/default/objects/Case/fields/TBPS_Adoption_Project_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>TBPS_Adoption_Project_Next_Steps__c</fullName>
    <description>Revenue Practice request to facilite tracking and reporting of Time Builder Implementation cases.</description>
    <label>Adoption Project Next Steps</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>