force-app/main/default/objects/Case/fields/TBPS_Firmwide_Rollout__c.field-meta.xml
<CustomField>
    <fullName>TBPS_Firmwide_Rollout__c</fullName>
    <description>Revenue Practice request to facilite tracking and reporting of Time Builder Implementation cases.</description>
    <label>Firmwide Rollout?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>