force-app/main/default/objects/Case/fields/TimeAsses_Client_facing_Assessment_Rpt__c.field-meta.xml
<CustomField>
    <fullName>TimeAsses_Client_facing_Assessment_Rpt__c</fullName>
    <label>Client facing Assessment Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>