force-app/main/default/objects/Case/fields/TimeAssess_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Assessment_Type__c</fullName>
    <inlineHelpText>Select the proper time builder assessment type from the listing provided.</inlineHelpText>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diagnostic Assessment for existing customer</fullName>
            </value>
            <value>
                <fullName>Post-Pilot Assessment</fullName>
            </value>
            <value>
                <fullName>Post-Rollout Assessment for Case Study</fullName>
            </value>
            <value>
                <fullName>Time Recording Assessment (Pre-Sales)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>