force-app/main/default/objects/Case/fields/TimeAssess_Client_facing_Assess_Present__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Client_facing_Assess_Present__c</fullName>
    <label>Client facing Assessment Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>