force-app/main/default/objects/Case/fields/TimeAssess_Lawer_Interviews__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Lawer_Interviews__c</fullName>
    <label>Lawer Interviews</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>