force-app/main/default/objects/Case/fields/TimeAssess_Lawyer_Survey__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Lawyer_Survey__c</fullName>
    <label>Lawyer Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>