force-app/main/default/objects/Case/fields/TimeAssess_Non_Disclosure_Agreement__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Non_Disclosure_Agreement__c</fullName>
    <label>Non Disclosure Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>