force-app/main/default/objects/Case/fields/TimeAssess_Notable_Lawyer_Quotes__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Notable_Lawyer_Quotes__c</fullName>
    <label>Notable Lawyer Quotes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>