force-app/main/default/objects/Case/fields/TimeAssess_Quantitative_Analysis__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Quantitative_Analysis__c</fullName>
    <label>Quantitative Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Requested</fullName>
            </value>
            <value>
                <fullName>Data Received</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Non-Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>