force-app/main/default/objects/Case/fields/TimeAssess_Recvd_Time_Recording_Policy__c.field-meta.xml
<CustomField>
    <fullName>TimeAssess_Recvd_Time_Recording_Policy__c</fullName>
    <label>Received Time Recording Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>