force-app/main/default/objects/Case/fields/Total_Billings__c.field-meta.xml
<CustomField>
    <fullName>Total_Billings__c</fullName>
    <description>SC-000036</description>
    <formula>Project_Name__r.pse__Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>