force-app/main/default/objects/Case/fields/Total_Hours2__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours2__c</fullName>
    <description>SC-000036</description>
    <formula>Project_Name__r.pse__Billable_Internal_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>