force-app/main/default/objects/Case/fields/Tsunami_Partner__c.field-meta.xml
<CustomField>
    <fullName>Tsunami_Partner__c</fullName>
    <inlineHelpText>This field should be used for external Partners only. Please specify SEs in the appropriate field.</inlineHelpText>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Legal</fullName>
            </value>
            <value>
                <fullName>Alan Gallagher</fullName>
            </value>
            <value>
                <fullName>Alan Westley</fullName>
            </value>
            <value>
                <fullName>Alastair Seddon</fullName>
            </value>
            <value>
                <fullName>Alejandro Arteaga</fullName>
            </value>
            <value>
                <fullName>Askew Network Solutions</fullName>
            </value>
            <value>
                <fullName>Athenian</fullName>
            </value>
            <value>
                <fullName>Brian McMorrow</fullName>
            </value>
            <value>
                <fullName>Brian Skinner</fullName>
            </value>
            <value>
                <fullName>Brooke Barber</fullName>
            </value>
            <value>
                <fullName>Chris Kave</fullName>
            </value>
            <value>
                <fullName>Daryl Winkelmann</fullName>
            </value>
            <value>
                <fullName>Dave Sampieri</fullName>
            </value>
            <value>
                <fullName>David Robinson</fullName>
            </value>
            <value>
                <fullName>David Wynn</fullName>
            </value>
            <value>
                <fullName>Duff &amp; Phelps</fullName>
            </value>
            <value>
                <fullName>Feynbrook</fullName>
            </value>
            <value>
                <fullName>Gary Rose</fullName>
            </value>
            <value>
                <fullName>Grace Camoglu</fullName>
            </value>
            <value>
                <fullName>Hildebrandt Baker Robbins</fullName>
            </value>
            <value>
                <fullName>Huron Consulting</fullName>
            </value>
            <value>
                <fullName>Hyperion</fullName>
            </value>
            <value>
                <fullName>ii3</fullName>
            </value>
            <value>
                <fullName>Jack Wang</fullName>
            </value>
            <value>
                <fullName>James Nielsen</fullName>
            </value>
            <value>
                <fullName>Jeff Armbrecht</fullName>
            </value>
            <value>
                <fullName>Jesse Meredith</fullName>
            </value>
            <value>
                <fullName>Joshua Kim</fullName>
            </value>
            <value>
                <fullName>Kamil Dada</fullName>
            </value>
            <value>
                <fullName>Kraft Kennedy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>