force-app/main/default/objects/Case/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3U Disk Drive</fullName>
            </value>
            <value>
                <fullName>3U Power Supply</fullName>
            </value>
            <value>
                <fullName>3U Backplane</fullName>
                <default>true</default>
                <label>3U Backplane</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>