force-app/main/default/objects/Case/fields/Updated_Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Fulfillment_Date__c</fullName>
    <description>Current estimated date of order fulfillment</description>
    <label>Updated Fulfillment Date</label>
    <type>Date</type>
</CustomField>