force-app/main/default/objects/Case/fields/User_is_Case_Contact__c.field-meta.xml
<CustomField>
    <fullName>User_is_Case_Contact__c</fullName>
    <description>SC-000047</description>
    <formula>IF(
  Contact.Id=$User.ContactId,
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User is Case Contact</label>
    <type>Checkbox</type>
</CustomField>