force-app/main/default/objects/Case/fields/Verified_Severity__c.field-meta.xml
<CustomField>
    <fullName>Verified_Severity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Critical priority cases, once we have assessed or taken the required action to stabilize the customer situation, the assigned Customer Support Engineer will downgrade the case priority from Critical to a more appropriate priority.  We would like to establish a means of preserving the original “verified critical” priority for reporting purposes.</description>
    <label>Verified Severity</label>
    <type>Checkbox</type>
</CustomField>