force-app/main/default/objects/Case/fields/WB_Risk_Consulting__c.field-meta.xml
<CustomField>
    <fullName>WB_Risk_Consulting__c</fullName>
    <label>WB Risk Consulting</label>
    <type>Date</type>
</CustomField>