force-app/main/default/objects/Case/fields/WebDAV_Action__c.field-meta.xml
<CustomField>
    <fullName>WebDAV_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WebDAV Action</label>
    <type>Checkbox</type>
</CustomField>