force-app/main/default/objects/Case/recordTypes/Acute_Situation_Alert.recordType-meta.xml
<RecordType>
    <fullName>Acute_Situation_Alert</fullName>
    <active>true</active>
    <businessProcess>Acute Situation Alert</businessProcess>
    <label>Acute Situation Alert</label>
</RecordType>