force-app/main/default/objects/Case/recordTypes/Customer_Success_IntApp_Open.recordType-meta.xml
<RecordType>
    <fullName>Customer_Success_IntApp_Open</fullName>
    <active>false</active>
    <businessProcess>ProfSvcs</businessProcess>
    <label>Customer Success - IntApp Open</label>
</RecordType>