force-app/main/default/objects/Case/recordTypes/Customer_Success_Other.recordType-meta.xml
<RecordType>
    <fullName>Customer_Success_Other</fullName>
    <active>false</active>
    <businessProcess>ProfSvcs</businessProcess>
    <label>Customer Success - Other</label>
</RecordType>