force-app/main/default/objects/Case/recordTypes/Customer_Success_Time_Builder.recordType-meta.xml
<RecordType>
    <fullName>Customer_Success_Time_Builder</fullName>
    <active>false</active>
    <businessProcess>ProfSvcs</businessProcess>
    <label>Customer Success - Time Builder</label>
</RecordType>