force-app/main/default/objects/Case/recordTypes/Deal_Velocity.recordType-meta.xml
<RecordType>
    <fullName>Deal_Velocity</fullName>
    <active>true</active>
    <businessProcess>Deal Velocity</businessProcess>
    <label>Deal Velocity</label>
</RecordType>