force-app/main/default/objects/Case/recordTypes/Executive_Support.recordType-meta.xml
<RecordType>
    <fullName>Executive_Support</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <description>Case Record Type for tracking support cases requiring executive team focus.</description>
    <label>Project Escalation</label>
</RecordType>