force-app/main/default/objects/Case/recordTypes/Executive_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Executive_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Executive Support Case</label>
</RecordType>