force-app/main/default/objects/Case/recordTypes/FeatureRequest.recordType-meta.xml
<RecordType>
    <fullName>FeatureRequest</fullName>
    <active>false</active>
    <businessProcess>Support</businessProcess>
    <description>Feature Requests generated from the public Feature Request Form</description>
    <label>Feature Request</label>
</RecordType>