force-app/main/default/objects/Case/recordTypes/FeedbackTimeBuilder.recordType-meta.xml
<RecordType>
    <fullName>FeedbackTimeBuilder</fullName>
    <active>false</active>
    <businessProcess>Support</businessProcess>
    <description>Capturing email coming from the feedback link in the Time Builder web app</description>
    <label>Feedback: Time Builder</label>
</RecordType>