force-app/main/default/objects/Case/recordTypes/FRU.recordType-meta.xml
<RecordType>
    <fullName>FRU</fullName>
    <active>false</active>
    <businessProcess>FRU</businessProcess>
    <description>Field Replaceable Unit - Use this to send replacement components (e.g. disk, power supply)</description>
    <label>FRU</label>
</RecordType>